array.island.Island.scala.error
Compilation error:
Island:4: error: illegal start of simple expression
} 
^