array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  for (a<- 1 to  )
}